Bug 462366 - correct bogus importBookmarksHTML behaviour, r=dietrich a=beltzner