toolkit/components/places/src/nsNavBookmarks.cpp
@@ -519,12 +519,13 @@ nsNavBookmarks::InitRoots()
   rv = prefService->GetBranch("", getter_AddRefs(prefBranch));
   NS_ENSURE_SUCCESS(rv, rv);
 
-  PRBool importDefaults = PR_TRUE;
-  rv = prefBranch->GetBoolPref("browser.places.importDefaults", &importDefaults);
-  if (NS_FAILED(rv) || importDefaults) {
+  PRUint16 databaseStatus = nsINavHistoryService::DATABASE_STATUS_OK;
+  rv = History()->GetDatabaseStatus(&databaseStatus);
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  if (NS_FAILED(rv) ||
+      databaseStatus != nsINavHistoryService::DATABASE_STATUS_OK) {
     rv = InitDefaults();
-    NS_ENSURE_SUCCESS(rv, rv);
-    rv = prefBranch->SetBoolPref("browser.places.importDefaults", PR_FALSE);
     NS_ENSURE_SUCCESS(rv, rv);
   }
 
